# BSU_Colloc_OS2

./: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
include/: DatabaseConnection.h  Singleton.h
src/: main.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  TestSingleton.cpp  cmake_install.cmake  colloc2ST.code-workspace
